BUGFIX: Adjustingwhitespace

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 #__next {
+  min-width: 100%;
   min-height: 100%;
 }
